[package]
name = "heliumbar"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "💭 A noble, light and aesthetic bar for Wayland // wlroots"
readme = "README.md"
repository = "https://github.com/pwnwriter/heliumbar"
homepage = "https://github.com/pwnwriter/heliumbar.git"
license = "MIT"
keywords = ["unixporn", "Hyprland", "Wayland-bar"]
categories = ["accessibility", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.17.0", package = "gtk" }
tokio = { version = "1.26.0", features = ["full"] }
gtk-layer-shell = "0.6.1"
json = "0.12.4"
glib = "0.18.1"
regex = "1.9.3"
tokio-uds = "0.2"
inotify = "0.10.2"
stray = {path = "stray"}
once_cell = "1.18.0"
